# teval

./: .gcloudignore  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  PLAN.md  README.md  cloudbuild.yaml  example_alignment.py  example_pydantic.py  example_report.py  example_usage.py  pyproject.toml  tox.ini  tox.md
docs/: api.md  generate_api_html.py  quickstart.md  review-response.md  roadmap.md
tests/: INTEGRATION_TESTS.md  __init__.py  test_integration.py  test_metrics.py
tevak/: __init__.py  metrics.py
teval/: __init__.py  metrics.py
