[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teval"
version = "0.1.2"
description = "Trivial LLM eval - as simple as possible"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "tvaroska"},
]
keywords = ["llm", "evaluation", "metrics", "testing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.9.0,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tvaroska/teval"
"Bug Tracker" = "https://github.com/tvaroska/teval/issues"
"Repository" = "https://github.com/tvaroska/teval"
"Documentation" = "https://github.com/tvaroska/teval/tree/main/docs"
"Changelog" = "https://github.com/tvaroska/teval/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]
integration-tests = [
    "google-genai>=0.2.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
